Header Alignment Issue Resolved
removed bootstrap grid and used flexbox instead.

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,36 +2,35 @@
     background-color: #003049;
     width: 100%;
     height: 69px;
-    padding: 0;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
 }   
 
+#titleDiv{
+    border: 1px dotted red;
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#navItemsDiv{
+    border: 1px dotted red;
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 #title{
+    border: 1px dotted red;
     color: #FCBF49;
     margin: 0;
-
+    font-family: "Jersey 20", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2.5em;
 }
 
-#gridContainer{
-    border: 1px dotted red;
-    margin: 0;
-    height: 100%;
-    width: 100%;
-}
-
-#gridRow1{
-    border: 1px dotted red;
-}
-
-#gridCol1{
-    border: 1px dotted red;
-}
-
-#gridCol2{
-    border: 1px dotted red;
-}
-
-#gridCol3{
-    border: 1px dotted red;
-    display: flex;
-}
